--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
