--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,24 @@
 
 buildscript {
     repositories {
+        //if you move this, it wont build because of the async-httpd
+        mavenCentral()
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
+        classpath 'com.squareup.retrofit2:converter-jackson:2.4.0'
+        classpath 'com.loopj.android:android-async-http:1.4.9'
+
     }
 }
 
 allprojects {
     repositories {
+        //if you move this, it wont build because of the async-httpd
+        mavenCentral()
         jcenter()
         google()
     }
